--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
-- rejestrowanie ktory bibliotekarz wypozyczyl i odebral egzemplarz
-- ile jest egzemplarzy ksiazki przy tabeli z ksiazkami
+- rejestrowanie ktory bibliotekarz wypozyczyl i odebral egzemplarz OK
+- ile jest egzemplarzy ksiazki przy tabeli z ksiazkami OK
 - konto po rejestracji nieaktywne, aktywuje je bibliotekarz po "sprawdzeniu" 
 - wiecej danych o userze
 - zmienic regulami zeby nie przypominal kopiowanego
-- zmienic w kontakcie dane i punkt na mapie na polibude
+- zmienic w kontakcie dane i punkt na mapie na polibude OK
 - na stronie glownej opis w stylu "to jest projekt na prace inz" itd
