add borrow_history and layout update

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@
 - zmienic regulami zeby nie przypominal kopiowanego
 - zmienic w kontakcie dane i punkt na mapie na polibude OK
 - na stronie glownej opis w stylu "to jest projekt na prace inz" itd
+- zwykli userzy moga widziec widoki superusera po wpisaniu linku - poprawic
