book informations update

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,4 @@
 - zmienic w kontakcie dane i punkt na mapie na polibude OK
 - na stronie glownej opis w stylu "to jest projekt na prace inz" itd
 - zwykli userzy moga widziec widoki superusera po wpisaniu linku - poprawic
+- przy probie dodania wydawnictwa, kategorii z tym samym polem  typu unique, angielskie nazwy bledow - poprawic
