--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,11 @@
 - rejestrowanie ktory bibliotekarz wypozyczyl i odebral egzemplarz OK
 - ile jest egzemplarzy ksiazki przy tabeli z ksiazkami OK
-- konto po rejestracji nieaktywne, aktywuje je bibliotekarz po "sprawdzeniu" 
-- wiecej danych o userze
+- konto po rejestracji nieaktywne, aktywuje je bibliotekarz po "sprawdzeniu" OK
+- doprogramować przyciski opcji w tabeli userow
+- dodac widok szczegółu usera
+- dodac zakladke mój profil dla uzytkownika a tam zmiana emaila telefonu
+- widok updateUser dla admina
+- wiecej danych o userze OK
 - zmienic regulami zeby nie przypominal kopiowanego
 - zmienic w kontakcie dane i punkt na mapie na polibude OK
 - na stronie glownej opis w stylu "to jest projekt na prace inz" itd
