--- a/TODO.txt
+++ b/TODO.txt
@@ -9,5 +9,5 @@
 - zmienic regulami zeby nie przypominal kopiowanego
 - zmienic w kontakcie dane i punkt na mapie na polibude OK
 - na stronie glownej opis w stylu "to jest projekt na prace inz" itd
-- zwykli userzy moga widziec widoki superusera po wpisaniu linku - poprawic
+- zwykli userzy moga widziec widoki superusera po wpisaniu linku - poprawic OK
 - przy probie dodania wydawnictwa, kategorii z tym samym polem  typu unique, angielskie nazwy bledow - poprawic
